Mobile Responsiveness Testing & Fixes